--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 
 <body unresolved fullbleed layout vertical>
 
-
+  <keygen-app flex></keygen-app>
 
   <!-- build:js scripts/app.js -->
   <script src="scripts/app.js"></script>
